[project]
name = "repl-nix-docembedassistant"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "cohere>=5.13.3",
    "docx>=0.2.4",
    "numpy>=1.26.4",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "streamlit>=1.41.0",
]
